[tool.poetry]
name = "airlift"
version = "1.1.0"
description = "Upload & Merge Data with Attachments to Airtable"
authors = ["Arjun <arjunprakash027@gmail.com>"]
readme = "README.md"
include = ["CHANGELOG.md"]
license = "MIT"
homepage = "https://github.com/TheAcharya/Airlift"
repository = "https://github.com/TheAcharya/Airlift"
documentation = "https://github.com/TheAcharya/Airlift/blob/main/README.md"
keywords = ["csv", "json", "airtable", "dropbox", "import", "merge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: Unix",
    "Topic :: Database",
    "Topic :: Internet",
    "Topic :: Terminals",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
airlift = "airlift.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
pyairtable = "^2.1.0.post1"
requests = "^2.31.0"
tqdm = "^4.64.0"
dropbox = "^11.36.2"
icecream = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pyairtable = "^2.1.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
