[tool.poetry]
name = "airlift"
version = "1.1.4"
description = "Upload & Merge Data with Attachments to Airtable"
authors = ["Arjun <arjunprakash027@gmail.com>"]
readme = "README.md"
include = ["CHANGELOG.md"]
license = "MIT"
homepage = "https://github.com/TheAcharya/Airlift"
repository = "https://github.com/TheAcharya/Airlift"
documentation = "https://github.com/TheAcharya/Airlift/blob/main/README.md"
keywords = ["csv", "json", "airtable", "dropbox", "import", "merge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: Unix",
    "Topic :: Database",
    "Topic :: Internet",
    "Topic :: Terminals",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
airlift = "airlift.cli:main"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pyairtable = "^3.1.1"
requests = "^2.32.4"
tqdm = "^4.66.4"
dropbox = "^12.0.2"
icecream = "^2.1.3"
markupsafe = "^3.0.2"
pydantic = "^2.11.7"
typing-extensions = "^4.14.1"
pytest = "^8.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
